debugged and finally working. Backend is now advanced MVC

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "myProject\\backend\\models\\": "backend/models/"
+            "myProject\\backend\\models\\": "backend/api/models/",
+            "myProject\\backend\\database\\": "backend/api/database/"
         }
     }
 }
